syntax = "proto3";

option go_package = ".;hello";
package hello;

service SayHello {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
